feat: add database connection

--- a/dev.properties
+++ b/dev.properties
@@ -1,1 +1,4 @@
 BaseUri=http://localhost:8080/
+DatabaseUrl=jdbc:postgresql://coursinfo.vinci.be:5432/dbloic_thomas
+DatabaseUser=loic_thomas
+DatabasePassword=paeGroupe4
