--- a/webapp/package.json
+++ b/webapp/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
-    "bootstrap": "5.3.0-alpha1"
+    "bootstrap": "5.3.0-alpha1",
+    "bootstrap-icons": "^1.10.3"
   }
 }
