--- a/dev.properties
+++ b/dev.properties
@@ -3,3 +3,4 @@ JWTSecret=PAEGroupe04
 DatabaseUrl=jdbc:postgresql://coursinfo.vinci.be:5432/dbloic_thomas
 DatabaseUser=loic_thomas
 DatabasePassword=paeGroupe4
+BlobPath=./blob
