--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,11 @@
       <groupId>org.glassfish.jersey.media</groupId>
       <version>3.1.1</version>
     </dependency>
+    <dependency>
+      <artifactId>commons-validator</artifactId>
+      <groupId>commons-validator</groupId>
+      <version>1.7</version>
+    </dependency>
   </dependencies>
   <dependencyManagement>
     <dependencies>
