--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,11 @@
       <groupId>com.fasterxml.jackson.datatype</groupId>
       <version>2.14.2</version>
     </dependency>
+    <dependency>
+      <artifactId>thumbnailator</artifactId>
+      <groupId>net.coobird</groupId>
+      <version>[0.4, 0.5)</version>
+    </dependency>
   </dependencies>
   <dependencyManagement>
     <dependencies>
