--- a/webapp/package.json
+++ b/webapp/package.json
@@ -32,6 +32,7 @@
     "@popperjs/core": "^2.11.6",
     "bootstrap": "5.3.0-alpha1",
     "bootstrap-icons": "^1.10.3",
+    "bootstrap5-autocomplete": "^1.1.5",
     "flatpickr": "^4.6.13"
   }
 }
