--- a/webapp/package.json
+++ b/webapp/package.json
@@ -30,9 +30,11 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
-    "bootstrap": "5.3.0-alpha3",
+    "bootstrap": "5.3.0-alpha1",
     "bootstrap-icons": "^1.10.3",
     "bootstrap5-autocomplete": "^1.1.5",
-    "flatpickr": "^4.6.13"
+    "chart.js": "^4.2.1",
+    "flatpickr": "^4.6.13",
+    "plotly.js-dist": "^2.21.0"
   }
 }
