--- a/webapp/package.json
+++ b/webapp/package.json
@@ -34,7 +34,6 @@
     "bootstrap-icons": "^1.10.3",
     "bootstrap5-autocomplete": "^1.1.5",
     "chart.js": "^4.2.1",
-    "flatpickr": "^4.6.13",
-    "plotly.js-dist": "^2.21.0"
+    "flatpickr": "^4.6.13"
   }
 }
